# zynaddsubfx

./: .coderabbit.yaml  .gitignore  .gitmodules  .travis.yml  .yamllint  AUTHORS.txt  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  FAQ.txt  HISTORY.txt  NEWS.txt  README.adoc  README.txt  TODO-default-values.txt  TODO-release  TODO-release.md  TODO.txt  ZynAddSubFX.lsm  bugs.txt  build-mingw-deps  compile.win32  homebrew.rb  style.cfg  style.sh  vcpkg.json  zynaddsubfx-alsa.desktop  zynaddsubfx-jack-multi.desktop  zynaddsubfx-jack.desktop  zynaddsubfx-oss.desktop  zynaddsubfx.desktop
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.txt  adsynth.txt  architecture.txt  build.txt  controller.txt  copyright-fixer.rb  effects.txt  envelope.txt  filter.txt  getting.txt  intro.txt  lfo.txt  mididefaults.txt  mingw.txt  myconf.conf  nrpn.txt  output.txt  saving.txt  wavetable-communication.md  zynaddsubfx.1.txt  zynaddsubfx.sgml  zynaddsubfx.txt
doc/IT/: 03-lfo_IT.txt  APPENDIX_C-doc_getting_IT.txt
doc/automation-proposal/: parameter-automation-documentation.txt  parameter-automation-future-plan.txt
doc/bash-completion/: CMakeLists.txt  zynaddsubfx.in
doc/win64-mingw64-msys2/: README.txt
src/: CMakeLists.txt  Makefile  Makefile.inc  default.bnk_zyn  globals.cpp  globals.h  launch_zynaddsubfx.bat  main.C  main.cpp  version.cpp  version.h.in  zyn-config.h.in  zyn-version.h.in  zynaddsubfx.nsi  zynaddsubfx_gcc.def
src/Compat/: err.h  unistd.h
src/Containers/: MultiPseudoStack.cpp  MultiPseudoStack.h  NotePool.cpp  NotePool.h  RtQueue.h  ScratchString.cpp  ScratchString.h
src/Controls/: CMakeLists.txt  Control.C  Control.cpp  Control.h  DelayCtl.C  DelayCtl.cpp  DelayCtl.h  Makefile
src/DSP/: AnalogFilter.C  AnalogFilter.cpp  AnalogFilter.h  CMakeLists.txt  CombFilter.cpp  CombFilter.h  FFTwrapper.C  FFTwrapper.cpp  FFTwrapper.h  Filter.C  Filter.cpp  Filter.h  Filter_.h  FormantFilter.C  FormantFilter.cpp  FormantFilter.h  Makefile  MoogFilter.cpp  MoogFilter.h  Reverter.cpp  Reverter.h  SVFilter.C  SVFilter.cpp  SVFilter.h  SallenKeyFilter.cpp  SallenKeyFilter.h  Unison.cpp  Unison.h  VAOnePoleFilter.cpp  VAOnePoleFilter.h  Value_Smoothing_Filter.cpp  Value_Smoothing_Filter.h
src/Effects/: APhaser.cpp  APhaser.h  Alienwah.C  Alienwah.cpp  Alienwah.h  CMakeLists.txt  Chorus.C  Chorus.cpp  Chorus.h  CombFilterBank.cpp  CombFilterBank.h  Distorsion.C  Distorsion.cpp  Distorsion.h  Distortion.cpp  Distortion.h  DynamicFilter.C  DynamicFilter.cpp  DynamicFilter.h  EQ.C  EQ.cpp  EQ.h  Echo.C  Echo.cpp  Echo.h  Effect.C  Effect.cpp  Effect.h  EffectLFO.C  EffectLFO.cpp  EffectLFO.h  EffectMgr.C  EffectMgr.cpp  EffectMgr.h  Hysteresis.cpp  Hysteresis.h  JilesAtherton.cpp  JilesAtherton.h  Makefile  Phaser.C  (+11 more)
src/Input/: ALSAMidiIn.C  ALSAMidiIn.cpp  ALSAMidiIn.h  CMakeLists.txt  Makefile  MidiIn.C  MidiIn.h  NULLMidiIn.C  NULLMidiIn.cpp  NULLMidiIn.h  OSSMidiIn.C  OSSMidiIn.h  WINMidiIn.C  WINMidiIn.h
src/Misc/: Allocator.cpp  Allocator.h  Atom.cpp  Atom.h  Atomic.cpp  Atomic.h  Bank.C  Bank.cpp  Bank.h  BankDb.cpp  BankDb.h  BeatClock.cpp  BeatClock.h  Buffer.C  Buffer.h  CMakeLists.txt  CallbackRepeater.cpp  CallbackRepeater.h  ClassWithPorts.h  Config.C  Config.cpp  Config.h  Control.h  Dump.C  Dump.cpp  Dump.h  LASHClient.C  LASHClient.cpp  LASHClient.h  Makefile  Master.C  Master.cpp  Master.h  MemLocker.cpp  MemLocker.h  Microtonal.C  Microtonal.cpp  Microtonal.h  MiddleWare.cpp  MiddleWare.h  (+31 more)
src/NewUI/: CMakeLists.txt
src/Nio/: AlsaEngine.cpp  AlsaEngine.h  AudioOut.cpp  AudioOut.h  CMakeLists.txt  Compressor.h  Engine.cpp  Engine.h  EngineMgr.cpp  EngineMgr.h  InMgr.cpp  InMgr.h  JackEngine.cpp  JackEngine.h  JackMultiEngine.cpp  JackMultiEngine.h  MidiEvent.cpp  MidiEvent.h  MidiIn.cpp  MidiIn.h  Nio.cpp  Nio.h  NulEngine.cpp  NulEngine.h  OssEngine.cpp  OssEngine.h  OssMultiEngine.cpp  OssMultiEngine.h  OutMgr.cpp  OutMgr.h  PaEngine.cpp  PaEngine.h  SafeQueue.cpp  SafeQueue.h  SndioEngine.cpp  SndioEngine.h  WavEngine.cpp  WavEngine.h  ZynSema.h  jack_osc.h
src/Output/: CMakeLists.txt  DSSIControl.cpp  DSSIControl.h  DSSIControlDescription.cpp  DSSIControlDescription.h  DSSIaudiooutput.C  DSSIaudiooutput.cpp  DSSIaudiooutput.h  JACK_RTaudiooutput.C  JACKaudiooutput.C  JACKaudiooutput.h  Makefile  OSSaudiooutput.C  OSSaudiooutput.h  PAaudiooutput.C  PAaudiooutput.h  Recorder.C  Recorder.cpp  Recorder.h  VSTaudiooutput.C  VSTaudiooutput.h  WAVaudiooutput.C  WAVaudiooutput.h  icon.cpp  icon.h  oscoutput.cpp  oscoutput.h
src/Params/: ADnoteParameters.C  ADnoteParameters.cpp  ADnoteParameters.h  CMakeLists.txt  Controller.C  Controller.cpp  Controller.h  EnvelopeParams.C  EnvelopeParams.cpp  EnvelopeParams.h  FilterParams.C  FilterParams.cpp  FilterParams.h  LFOParams.C  LFOParams.cpp  LFOParams.h  Makefile  PADnoteParameters.C  PADnoteParameters.cpp  PADnoteParameters.h  Presets.C  Presets.cpp  Presets.h  PresetsArray.cpp  PresetsArray.h  PresetsStore.C  PresetsStore.cpp  PresetsStore.h  SEQParams.cpp  SEQParams.h  SUBnoteParameters.C  SUBnoteParameters.cpp  SUBnoteParameters.h  WaveTable.cpp  WaveTable.h  WaveTableFwd.h
src/Plugin/: AbstractFX.hpp  CMakeLists.txt
src/Samples/: AuSample.C  AuSample.cpp  AuSample.h  CMakeLists.txt  FqSample.C  FqSample.cpp  FqSample.h  Makefile  Sample.C  Sample.cpp  Sample.h  StereoSample.C  StereoSample.h
src/Seq/: CMakeLists.txt  MIDIEvents.C  MIDIEvents.h  MIDIFile.C  MIDIFile.h  Makefile  Sequencer.C  Sequencer.h
src/Synth/: ADnote.C  ADnote.cpp  ADnote.cpp.orig  ADnote.cxx  ADnote.h  CMakeLists.txt  Envelope.C  Envelope.cpp  Envelope.h  LFO.C  LFO.cpp  LFO.h  Makefile  ModFilter.cpp  ModFilter.h  ModMatrix.cpp  ModMatrix.h  OscilGen.C  OscilGen.cpp  OscilGen.h  PADnote.C  PADnote.cpp  PADnote.h  Portamento.cpp  Portamento.h  Resonance.C  Resonance.cpp  Resonance.h  SEQ.cpp  SEQ.h  SUBnote.C  SUBnote.cpp  SUBnote.h  SynthNote.cpp  SynthNote.h  WatchPoint.cpp  WatchPoint.h  basefunctions.cpp  basefunctions.h  wavenormalgen.cpp  (+1 more)
src/Tests/: AdNoteTest.cpp  AdNoteTest.h  AllocatorTest.cpp  CppTest.h  (+66 more)
(+341 files in other folders)
